myparser-tc.output
Grammar

    0 $accept: program $end

    1 program: global_decl func_decl_list KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' local_decl body return '}'
    2        | global_decl func_decl_list KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' body return '}'

    3 decl_types: var_decl
    4           | const_decl

    5 global_decl: global_decl decl_types
    6            | decl_types

    7 var_decl: KW_LET let_decl_body

    8 let_decl_body: let_decl_list ':' type_spec ';'

    9 let_decl_list: let_decl_list ',' let_decl_init
   10              | let_decl_init

   11 let_decl_init: decl_id
   12              | decl_id ASSIGN expr

   13 const_decl: KW_CONST const_decl_body

   14 const_decl_body: const_decl_list ':' type_spec ';'

   15 const_decl_list: const_decl_list ',' const_decl_init
   16                | const_decl_init

   17 const_decl_init: decl_id ASSIGN POSINT
   18                | decl_id ASSIGN REAL
   19                | decl_id ASSIGN STRING

   20 decl_id: IDENT
   21        | '[' ']' IDENT
   22        | IDENT '[' POSINT ']'

   23 type_spec: KW_INT
   24          | KW_REAL
   25          | KW_BOOL
   26          | KW_STRING

   27 expr: POSINT
   28     | REAL
   29     | STRING
   30     | decl_id
   31     | func_call
   32     | '-' expr
   33     | '+' expr
   34     | KW_NOT expr
   35     | expr KW_OR expr
   36     | expr KW_AND expr
   37     | '(' expr ')'
   38     | '[' expr ']'
   39     | expr '+' expr
   40     | expr '-' expr
   41     | expr '*' expr
   42     | expr '/' expr
   43     | expr '%' expr
   44     | expr TK_OP_BIGGER expr
   45     | expr TK_OP_BIGEQ expr
   46     | expr TK_OP_NOTEQ expr
   47     | expr TK_OP_EQ expr
   48     | KW_TRUE
   49     | KW_FALSE

   50 func_decl_list: func_decl_list func_decl
   51               | func_decl

   52 func_decl: KW_CONST decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' local_decl body return '}' ';'
   53          | KW_CONST decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' local_decl return '}' ';'
   54          | KW_CONST decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' return '}' ';'
   55          | KW_CONST decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' body return '}' ';'

   56 par_decl_list: par_decl_list ',' par_decl
   57              | par_decl

   58 par_decl: decl_id ':' type_spec
   59         | %empty

   60 body: body command
   61     | command

   62 command: decl_id ASSIGN expr ';'
   63        | func_call ';'
   64        | if_command
   65        | while_command

   66 local_decl: local_decl var_decl
   67           | var_decl

   68 func_call: IDENT '(' param_list ')'

   69 param_list: param_list ',' param
   70           | param

   71 param: expr
   72      | %empty

   73 return: KW_RETURN expr ';'
   74       | KW_RETURN ';'
   75       | %empty

   76 if_command: KW_IF expr KW_THEN body if_rest

   77 if_rest: KW_ELSE body KW_FI ';'
   78        | KW_FI ';'

   79 while_command: KW_WHILE expr KW_LOOP body KW_POOL ';'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 43
'(' (40) 1 2 37 52 53 54 55 68
')' (41) 1 2 37 52 53 54 55 68
'*' (42) 41
'+' (43) 33 39
',' (44) 9 15 56 69
'-' (45) 32 40
'/' (47) 42
':' (58) 1 2 8 14 52 53 54 55 58
';' (59) 8 14 52 53 54 55 62 63 73 74 77 78 79
'[' (91) 21 22 38
']' (93) 21 22 38
'{' (123) 1 2 52 53 54 55
'}' (125) 1 2 52 53 54 55
error (256)
KW_INT (258) 1 2 23
KW_REAL (259) 24
KW_STRING (260) 26
KW_TRUE (261) 48
KW_FALSE (262) 49
KW_BOOL (263) 25
KW_IF (264) 76
KW_THEN (265) 76
KW_ELSE (266) 77
KW_FI (267) 77 78
KW_WHILE (268) 79
KW_LOOP (269) 79
KW_POOL (270) 79
KW_CONST (271) 1 2 13 52 53 54 55
KW_LET (272) 7
KW_RETURN (273) 73 74
KW_NOT (274) 34
KW_AND (275) 36
KW_OR (276) 35
KW_START (277) 1 2
STRING (278) 19 29
IDENT (279) 20 21 22 68
POSINT (280) 17 22 27
REAL (281) 18 28
ASSIGN (282) 1 2 12 17 18 19 52 53 54 55 62
TK_OP_EQ (283) 47
TK_OP_BIGGER (284) 44
TK_OP_BIGEQ (285) 45
TK_OP_NOTEQ (286) 46
ARROW (287) 1 2 52 53 54 55


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1 2, on right: 0
decl_types (49)
    on left: 3 4, on right: 5 6
global_decl (50)
    on left: 5 6, on right: 1 2 5
var_decl (51)
    on left: 7, on right: 3 66 67
let_decl_body (52)
    on left: 8, on right: 7
let_decl_list (53)
    on left: 9 10, on right: 8 9
let_decl_init (54)
    on left: 11 12, on right: 9 10
const_decl (55)
    on left: 13, on right: 4
const_decl_body (56)
    on left: 14, on right: 13
const_decl_list (57)
    on left: 15 16, on right: 14 15
const_decl_init (58)
    on left: 17 18 19, on right: 15 16
decl_id (59)
    on left: 20 21 22, on right: 11 12 17 18 19 30 52 53 54 55 58 62
type_spec (60)
    on left: 23 24 25 26, on right: 8 14 52 53 54 55 58
expr (61)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47 48 49, on right: 12 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 62 71 73 76 79
func_decl_list (62)
    on left: 50 51, on right: 1 2 50
func_decl (63)
    on left: 52 53 54 55, on right: 50 51
par_decl_list (64)
    on left: 56 57, on right: 52 53 54 55 56
par_decl (65)
    on left: 58 59, on right: 56 57
body (66)
    on left: 60 61, on right: 1 2 52 55 60 76 77 79
command (67)
    on left: 62 63 64 65, on right: 60 61
local_decl (68)
    on left: 66 67, on right: 1 52 53 66
func_call (69)
    on left: 68, on right: 31 63
param_list (70)
    on left: 69 70, on right: 68 69
param (71)
    on left: 71 72, on right: 69 70
return (72)
    on left: 73 74 75, on right: 1 2 52 53 54 55
if_command (73)
    on left: 76, on right: 64
if_rest (74)
    on left: 77 78, on right: 76
while_command (75)
    on left: 79, on right: 65


State 0

    0 $accept: . program $end
    1 program: . global_decl func_decl_list KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' local_decl body return '}'
    2        | . global_decl func_decl_list KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' body return '}'
    3 decl_types: . var_decl
    4           | . const_decl
    5 global_decl: . global_decl decl_types
    6            | . decl_types
    7 var_decl: . KW_LET let_decl_body
   13 const_decl: . KW_CONST const_decl_body

    KW_CONST  shift, and go to state 1
    KW_LET    shift, and go to state 2

    program      go to state 3
    decl_types   go to state 4
    global_decl  go to state 5
    var_decl     go to state 6
    const_decl   go to state 7


State 1

   13 const_decl: KW_CONST . const_decl_body
   14 const_decl_body: . const_decl_list ':' type_spec ';'
   15 const_decl_list: . const_decl_list ',' const_decl_init
   16                | . const_decl_init
   17 const_decl_init: . decl_id ASSIGN POSINT
   18                | . decl_id ASSIGN REAL
   19                | . decl_id ASSIGN STRING
   20 decl_id: . IDENT
   21        | . '[' ']' IDENT
   22        | . IDENT '[' POSINT ']'

    IDENT  shift, and go to state 8
    '['    shift, and go to state 9

    const_decl_body  go to state 10
    const_decl_list  go to state 11
    const_decl_init  go to state 12
    decl_id          go to state 13


State 2

    7 var_decl: KW_LET . let_decl_body
    8 let_decl_body: . let_decl_list ':' type_spec ';'
    9 let_decl_list: . let_decl_list ',' let_decl_init
   10              | . let_decl_init
   11 let_decl_init: . decl_id
   12              | . decl_id ASSIGN expr
   20 decl_id: . IDENT
   21        | . '[' ']' IDENT
   22        | . IDENT '[' POSINT ']'

    IDENT  shift, and go to state 8
    '['    shift, and go to state 9

    let_decl_body  go to state 14
    let_decl_list  go to state 15
    let_decl_init  go to state 16
    decl_id        go to state 17


State 3

    0 $accept: program . $end

    $end  shift, and go to state 18


State 4

    6 global_decl: decl_types .

    $default  reduce using rule 6 (global_decl)


State 5

    1 program: global_decl . func_decl_list KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' local_decl body return '}'
    2        | global_decl . func_decl_list KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' body return '}'
    3 decl_types: . var_decl
    4           | . const_decl
    5 global_decl: global_decl . decl_types
    7 var_decl: . KW_LET let_decl_body
   13 const_decl: . KW_CONST const_decl_body
   50 func_decl_list: . func_decl_list func_decl
   51               | . func_decl
   52 func_decl: . KW_CONST decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' local_decl body return '}' ';'
   53          | . KW_CONST decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' local_decl return '}' ';'
   54          | . KW_CONST decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' return '}' ';'
   55          | . KW_CONST decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' body return '}' ';'

    KW_CONST  shift, and go to state 19
    KW_LET    shift, and go to state 2

    decl_types      go to state 20
    var_decl        go to state 6
    const_decl      go to state 7
    func_decl_list  go to state 21
    func_decl       go to state 22


State 6

    3 decl_types: var_decl .

    $default  reduce using rule 3 (decl_types)


State 7

    4 decl_types: const_decl .

    $default  reduce using rule 4 (decl_types)


State 8

   20 decl_id: IDENT .  [ASSIGN, ':', ',']
   22        | IDENT . '[' POSINT ']'

    '['  shift, and go to state 23

    $default  reduce using rule 20 (decl_id)


State 9

   21 decl_id: '[' . ']' IDENT

    ']'  shift, and go to state 24


State 10

   13 const_decl: KW_CONST const_decl_body .

    $default  reduce using rule 13 (const_decl)


State 11

   14 const_decl_body: const_decl_list . ':' type_spec ';'
   15 const_decl_list: const_decl_list . ',' const_decl_init

    ':'  shift, and go to state 25
    ','  shift, and go to state 26


State 12

   16 const_decl_list: const_decl_init .

    $default  reduce using rule 16 (const_decl_list)


State 13

   17 const_decl_init: decl_id . ASSIGN POSINT
   18                | decl_id . ASSIGN REAL
   19                | decl_id . ASSIGN STRING

    ASSIGN  shift, and go to state 27


State 14

    7 var_decl: KW_LET let_decl_body .

    $default  reduce using rule 7 (var_decl)


State 15

    8 let_decl_body: let_decl_list . ':' type_spec ';'
    9 let_decl_list: let_decl_list . ',' let_decl_init

    ':'  shift, and go to state 28
    ','  shift, and go to state 29


State 16

   10 let_decl_list: let_decl_init .

    $default  reduce using rule 10 (let_decl_list)


State 17

   11 let_decl_init: decl_id .  [':', ',']
   12              | decl_id . ASSIGN expr

    ASSIGN  shift, and go to state 30

    $default  reduce using rule 11 (let_decl_init)


State 18

    0 $accept: program $end .

    $default  accept


State 19

   13 const_decl: KW_CONST . const_decl_body
   14 const_decl_body: . const_decl_list ':' type_spec ';'
   15 const_decl_list: . const_decl_list ',' const_decl_init
   16                | . const_decl_init
   17 const_decl_init: . decl_id ASSIGN POSINT
   18                | . decl_id ASSIGN REAL
   19                | . decl_id ASSIGN STRING
   20 decl_id: . IDENT
   21        | . '[' ']' IDENT
   22        | . IDENT '[' POSINT ']'
   52 func_decl: KW_CONST . decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' local_decl body return '}' ';'
   53          | KW_CONST . decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' local_decl return '}' ';'
   54          | KW_CONST . decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' return '}' ';'
   55          | KW_CONST . decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' body return '}' ';'

    IDENT  shift, and go to state 8
    '['    shift, and go to state 9

    const_decl_body  go to state 10
    const_decl_list  go to state 11
    const_decl_init  go to state 12
    decl_id          go to state 31


State 20

    5 global_decl: global_decl decl_types .

    $default  reduce using rule 5 (global_decl)


State 21

    1 program: global_decl func_decl_list . KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' local_decl body return '}'
    2        | global_decl func_decl_list . KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' body return '}'
   50 func_decl_list: func_decl_list . func_decl
   52 func_decl: . KW_CONST decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' local_decl body return '}' ';'
   53          | . KW_CONST decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' local_decl return '}' ';'
   54          | . KW_CONST decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' return '}' ';'
   55          | . KW_CONST decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' body return '}' ';'

    KW_CONST  shift, and go to state 32

    func_decl  go to state 33


State 22

   51 func_decl_list: func_decl .

    $default  reduce using rule 51 (func_decl_list)


State 23

   22 decl_id: IDENT '[' . POSINT ']'

    POSINT  shift, and go to state 34


State 24

   21 decl_id: '[' ']' . IDENT

    IDENT  shift, and go to state 35


State 25

   14 const_decl_body: const_decl_list ':' . type_spec ';'
   23 type_spec: . KW_INT
   24          | . KW_REAL
   25          | . KW_BOOL
   26          | . KW_STRING

    KW_INT     shift, and go to state 36
    KW_REAL    shift, and go to state 37
    KW_STRING  shift, and go to state 38
    KW_BOOL    shift, and go to state 39

    type_spec  go to state 40


State 26

   15 const_decl_list: const_decl_list ',' . const_decl_init
   17 const_decl_init: . decl_id ASSIGN POSINT
   18                | . decl_id ASSIGN REAL
   19                | . decl_id ASSIGN STRING
   20 decl_id: . IDENT
   21        | . '[' ']' IDENT
   22        | . IDENT '[' POSINT ']'

    IDENT  shift, and go to state 8
    '['    shift, and go to state 9

    const_decl_init  go to state 41
    decl_id          go to state 13


State 27

   17 const_decl_init: decl_id ASSIGN . POSINT
   18                | decl_id ASSIGN . REAL
   19                | decl_id ASSIGN . STRING

    STRING  shift, and go to state 42
    POSINT  shift, and go to state 43
    REAL    shift, and go to state 44


State 28

    8 let_decl_body: let_decl_list ':' . type_spec ';'
   23 type_spec: . KW_INT
   24          | . KW_REAL
   25          | . KW_BOOL
   26          | . KW_STRING

    KW_INT     shift, and go to state 36
    KW_REAL    shift, and go to state 37
    KW_STRING  shift, and go to state 38
    KW_BOOL    shift, and go to state 39

    type_spec  go to state 45


State 29

    9 let_decl_list: let_decl_list ',' . let_decl_init
   11 let_decl_init: . decl_id
   12              | . decl_id ASSIGN expr
   20 decl_id: . IDENT
   21        | . '[' ']' IDENT
   22        | . IDENT '[' POSINT ']'

    IDENT  shift, and go to state 8
    '['    shift, and go to state 9

    let_decl_init  go to state 46
    decl_id        go to state 17


State 30

   12 let_decl_init: decl_id ASSIGN . expr
   20 decl_id: . IDENT
   21        | . '[' ']' IDENT
   22        | . IDENT '[' POSINT ']'
   27 expr: . POSINT
   28     | . REAL
   29     | . STRING
   30     | . decl_id
   31     | . func_call
   32     | . '-' expr
   33     | . '+' expr
   34     | . KW_NOT expr
   35     | . expr KW_OR expr
   36     | . expr KW_AND expr
   37     | . '(' expr ')'
   38     | . '[' expr ']'
   39     | . expr '+' expr
   40     | . expr '-' expr
   41     | . expr '*' expr
   42     | . expr '/' expr
   43     | . expr '%' expr
   44     | . expr TK_OP_BIGGER expr
   45     | . expr TK_OP_BIGEQ expr
   46     | . expr TK_OP_NOTEQ expr
   47     | . expr TK_OP_EQ expr
   48     | . KW_TRUE
   49     | . KW_FALSE
   68 func_call: . IDENT '(' param_list ')'

    KW_TRUE   shift, and go to state 47
    KW_FALSE  shift, and go to state 48
    KW_NOT    shift, and go to state 49
    STRING    shift, and go to state 50
    IDENT     shift, and go to state 51
    POSINT    shift, and go to state 52
    REAL      shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56
    '['       shift, and go to state 57

    decl_id    go to state 58
    expr       go to state 59
    func_call  go to state 60


State 31

   17 const_decl_init: decl_id . ASSIGN POSINT
   18                | decl_id . ASSIGN REAL
   19                | decl_id . ASSIGN STRING
   52 func_decl: KW_CONST decl_id . ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' local_decl body return '}' ';'
   53          | KW_CONST decl_id . ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' local_decl return '}' ';'
   54          | KW_CONST decl_id . ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' return '}' ';'
   55          | KW_CONST decl_id . ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' body return '}' ';'

    ASSIGN  shift, and go to state 61


State 32

    1 program: global_decl func_decl_list KW_CONST . KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' local_decl body return '}'
    2        | global_decl func_decl_list KW_CONST . KW_START ASSIGN '(' ')' ':' KW_INT ARROW '{' body return '}'
   20 decl_id: . IDENT
   21        | . '[' ']' IDENT
   22        | . IDENT '[' POSINT ']'
   52 func_decl: KW_CONST . decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' local_decl body return '}' ';'
   53          | KW_CONST . decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' local_decl return '}' ';'
   54          | KW_CONST . decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' return '}' ';'
   55          | KW_CONST . decl_id ASSIGN '(' par_decl_list ')' ':' type_spec ARROW '{' body return '}' ';'

    KW_START  shift, and go to state 62
    IDENT     shift, and go to state 8
    '['       shift, and go to state 9

    decl_id  go to state 63


State 33

   50 func_decl_list: func_decl_list func_decl .

    $default  reduce using rule 50 (func_decl_list)


State 34

   22 decl_id: IDENT '[' POSINT . ']'

    ']'  shift, and go to state 64


State 35

   21 decl_id: '[' ']' IDENT .

    $default  reduce using rule 21 (decl_id)


State 36

   23 type_spec: KW_INT .

    $default  reduce using rule 23 (type_spec)


State 37

   24 type_spec: KW_REAL .

    $default  reduce using rule 24 (type_spec)


State 38

   26 type_spec: KW_STRING .

    $default  reduce using rule 26 (type_spec)


State 39

   25 type_spec: KW_BOOL .

    $default  reduce using rule 25 (type_spec)


State 40

   14 const_decl_body: const_decl_list ':' type_spec . ';'

    ';'  shift, and go to state 65


State 41

   15 const_decl_list: const_decl_list ',' const_decl_init .

    $default  reduce using rule 15 (const_decl_list)


State 42

   19 const_decl_init: decl_id ASSIGN STRING .

    $default  reduce using rule 19 (const_decl_init)


State 43

   17 const_decl_init: decl_id ASSIGN POSINT .

    $default  reduce using rule 17 (const_decl_init)


State 44

   18 const_decl_init: decl_id ASSIGN REAL .

    $default  reduce using rule 18 (const_decl_init)


State 45

    8 let_decl_body: let_decl_list ':' type_spec . ';'

    ';'  shift, and go to state 66


State 46

    9 let_decl_list: let_decl_list ',' let_decl_init .

    $default  reduce using rule 9 (let_decl_list)


State 47

   48 expr: KW_TRUE .

    $default  reduce using rule 48 (expr)


State 48

   49 expr: KW_FALSE .

    $default  reduce using rule 49 (expr)


State 49

   20 decl_id: . IDENT
   21        | . '[' ']' IDENT
   22        | . IDENT '[' POSINT ']'
   27 expr: . POSINT
   28     | . REAL
   29     | . STRING
   30     | . decl_id
   31     | . func_call
   32     | . '-' expr
   33     | . '+' expr
   34     | . KW_NOT expr
   34     | KW_NOT . expr
   35     | . expr KW_OR expr
   36     | . expr KW_AND expr
   37     | . '(' expr ')'
   38     | . '[' expr ']'
   39     | . expr '+' expr
   40     | . expr '-' expr
   41     | . expr '*' expr
   42     | . expr '/' expr
   43     | . expr '%' expr
   44     | . expr TK_OP_BIGGER expr
   45     | . expr TK_OP_BIGEQ expr
   46     | . expr TK_OP_NOTEQ expr
   47     | . expr TK_OP_EQ expr
   48     | . KW_TRUE
   49     | . KW_FALSE
   68 func_call: . IDENT '(' param_list ')'

    KW_TRUE   shift, and go to state 47
    KW_FALSE  shift, and go to state 48
    KW_NOT    shift, and go to state 49
    STRING    shift, and go to state 50
    IDENT     shift, and go to state 51
    POSINT    shift, and go to state 52
    REAL      shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56
    '['       shift, and go to state 57

    decl_id    go to state 58
    expr       go to state 67
    func_call  go to state 60


State 50

   29 expr: STRING .

    $default  reduce using rule 29 (expr)


State 51

   20 decl_id: IDENT .  [KW_THEN, KW_LOOP, KW_AND, KW_OR, ASSIGN, TK_OP_EQ, TK_OP_BIGGER, TK_OP_BIGEQ, TK_OP_NOTEQ, '+', '-', '*', '/', '%', ')', ':', ';', ',', ']']
   22        | IDENT . '[' POSINT ']'
   68 func_call: IDENT . '(' param_list ')'

    '('  shift, and go to state 68
    '['  shift, and go to state 23

    $default  reduce using rule 20 (decl_id)


State 52

   27 expr: POSINT .

    $default  reduce using rule 27 (expr)


State 53

   28 expr: REAL .

    $default  reduce using rule 28 (expr)


State 54

   20 decl_id: . IDENT
   21        | . '[' ']' IDENT
   22        | . IDENT '[' POSINT ']'
   27 expr: . POSINT
   28     | . REAL
   29     | . STRING
   30     | . decl_id
   31     | . func_call
   32     | . '-' expr
   33     | . '+' expr
   33     | '+' . expr
   34     | . KW_NOT expr
   35     | . expr KW_OR expr
   36     | . expr KW_AND expr
   37     | . '(' expr ')'
   38     | . '[' expr ']'
   39     | . expr '+' expr
   40     | . expr '-' expr
   41     | . expr '*' expr
   42     | . expr '/' expr
   43     | . expr '%' expr
   44     | . expr TK_OP_BIGGER expr
   45     | . expr TK_OP_BIGEQ expr
   46     | . expr TK_OP_NOTEQ expr
   47     | . expr TK_OP_EQ expr
   48     | . KW_TRUE
   49     | . KW_FALSE
   68 func_call: . IDENT '(' param_list ')'

    KW_TRUE   shift, and go to state 47
    KW_FALSE  shift, and go to state 48
    KW_NOT    shift, and go to state 49
    STRING    shift, and go to state 50
    IDENT     shift, and go to state 51
    POSINT    shift, and go to state 52
    REAL      shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56
    '['       shift, and go to state 57

    decl_id    go to state 58
    expr       go to state 69
    func_call  go to state 60


State 55
